# nss-wrapper

./: .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  CPackConfig.cmake  CTestConfig.cmake  ConfigureChecks.cmake  LICENSE  README.md  TODO  config.h.cmake  nss_wrapper-config.cmake.in  nss_wrapper.pc.cmake
.clangd/index/: nss_nwrap.c.6CD8D6240BEF45A7.idx  nss_wrapper.c.496306141B70693D.idx  test_getaddrinfo.c.641BB471F444137A.idx  test_gethostby_name_addr.c.C9C460E7372D7C61.idx  test_gethostent.c.FDE119456A174D8F.idx  test_getnameinfo.c.779E41D17A149E05.idx  test_getpwuid_module.c.13413495523E694E.idx  test_nwrap_disabled.c.59E63F9B2D58E517.idx  test_nwrap_vector.c.6DA36926E43E358A.idx  test_shadow.c.85DFA55943F2551B.idx  testsuite.c.AF64C06B860D31A7.idx
debian/: changelog  control  libnss-wrapper.lintian-overrides  rules
debian/patches/: no-soname.diff  use-gnu-lib-names.diff
doc/: CMakeLists.txt  nss_wrapper.1  nss_wrapper.1.txt
src/: CMakeLists.txt
tests/: CMakeLists.txt  nss_nwrap.c  passwd.in  test_getaddrinfo.c  test_gethostby_name_addr.c  test_getpwuid_module.c  test_nwrap_disabled.c  testsuite.c
